Test fix gh-pages overflow scrolling 4. Update css styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-.container {
-  padding-left: 0px !important;
-  padding-right: 0px !important;
-}
-
 @font-face {
   font-family: "LifeCraft";
   src: local("LifeCraft"), url(fonts/LifeCraft_Font.ttf) format("opentype");
