--- a/src/index.css
+++ b/src/index.css
@@ -7,32 +7,34 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* overflow-y: scroll; */
-  height: 100%;
+  /* height: 100%;
   width: 100%;
   overflow-y: hidden;
   overflow-x: hidden;
   overflow: hidden;
+  position: relative; */
 }
 
 body > #root {
-  position: absolute;
-  top: 0;
+  /* position: absolute; */
+  /* top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  overflow: auto;
+  overflow: auto; */
 }
 
-body > #root > div {
+body > #root > .App {
   /* position: absolute; */
   /* overflow: auto; */
   /* overflow-y: scroll; */
   /* overflow-x: scroll; */
-  margin-top: 56px;
+  /* margin-top: 56px; */
   /* height: 100vh; */
+  position: relative;
   min-height: 100vh;
-  background-image: url(images/unnamed.jpg);
-  background-size: cover;
+  /* background-image: url(images/unnamed.jpg); */
+  /* background-size: cover; */
   /* overflow: visible; */
 }
 
@@ -40,10 +42,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.auth-wrapper {
+  /* padding-bottom: 56px; */
+  /* height: 100vh; */
+  min-height: 90vh;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0 !important;
+  /* height: 5vh; */
+}
+
 .auth-inner {
   /* background-image: url(images/battle.jpg); */
+  background-image: url(images/unnamed.jpg);
+  min-height: 90vh;
+  background-size: cover;
   /* background-image: url(images/unnamed.jpg); */
   /* background-size: cover; */
-  /* background-image: url(images/unnamed.jpg); */
-  background-size: cover;
+  /* padding-bottom: 56px; */
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.container {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
